reviewing class basics with constructors and instance methods

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 
    
 </body>
-    <script src='printChildren.js'></script>
+    <script src='./JScorePrinciples.js/classes.js'></script>
 </html>
