updated singly linked list

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 
    
 </body>
-    <script src='./JScorePrinciples.js/classes.js'></script>
+    <script src='./JScorePrinciples.js/singlyLinkedLists.js'></script>
 </html>
